# FiniteElementSolver

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: ci.yml  tests.yml
src/: include.hpp
src/core/: custom_concepts.hpp
src/core/geometry/: geometry.hpp
src/core/kernels/: kernels.hpp
src/core/math/: math_helper.hpp
src/core/mesh/: utils.hpp
src/solutions/custom_cuda/mesh/: gen_mesh.cu  mesh_interface_cuda.hpp
src/solutions/custom_pthreads/: pthreads_manage.hpp
src/solutions/custom_pthreads/grid/: grid.hpp
src/solutions/custom_pthreads/mesh/: mesh.hpp  mesh_impl.tpp  pthreads_impl.cpp  pthreads_interface.hpp
tests/: test_fixtures.hpp  test_geometry.cpp  test_grid.cpp  test_kernels.cpp  test_main.cpp  test_mesh.cpp  test_utils.cpp  test_utils.hpp
